# Kinone

./: .gitignore  README.md  Scores.txt  config.jsonc  console_log.txt  dashboard.py  evaluate.py  export_onnx.py  main.py  predict.py  pyproject.toml  run_config.json  train.py  training_log.json
report/: main.tex  summary.tex
src/core/: batchnorm.py  losses.py  metrics.py  modules.py  onnx.py  ops.py  optim.py  pool.py  schedulers.py  tensor.py
src/core/models/: __init__.py  efficientnet.py  resnet.py
src/data/: datamodule.py  nih_cxr.py  nih_datamodule.py
src/scripts/: download_nih_dataset.py  export_onnx.py  one_off_export.py
src/utils/: common.py
tests/: conftest.py  test_binary_ops.py  test_data.py  test_losses.py  test_matmul_convolutions.py  test_metrics.py  test_norms.py  test_onnx_export.py  test_optimizer.py  test_pooling_ops.py  test_reduction_ops.py  test_unary_ops.py  utils.py
